youfull/objects/Action_Alert__c.object
<CustomObject>
    <fields>
        <fullName>ALM_User__c</fullName>
        <label>ALM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Alert_Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Action Alert Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Orders Not submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders / Sales under minimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders on Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downline Personal Sales Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Due / Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Order Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additions / Reinstatements / Removals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Report LOA 1-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.A.T.D. Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking &amp;amp; Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday / Avon Anniversary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Alert</label>
    <nameField>
        <label>Action Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Alert</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>